--- a/About Me.html
+++ b/About Me.html
@@ -42,7 +42,7 @@
           <span class="text">To know about me?</span>
           <a href="#" target="_blank">
             <button type="click" class="btn btn-success m-2 p-2">
-              Read more
+              Read 
             </button>
           </a>
         </div>
@@ -50,9 +50,7 @@
       <div class="introContainer">
         <div class="intro">
           Hey everyone ,<br />
-          My name is Rakesh Mandal and I was born and grown up in delhi. I am
-          living in delhi for the last 23-24 years with my family. I did my
-          graduation in Economics from kirori mal college.
+         This is Rakesh Mandal ,an aspiring software developer . lets connect to build something great .......
         </div>
       </div>
     </div>
