--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./resource/Profile-pic (1).jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer@Rakesh_Mandal</title>
+    <title>Developer@Rakesh</title>
   </head>
   <body>
     <div id="root"></div>
