trying to serve static files

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./output/static/Profile-pic (1).jpeg" />
+    <link rel="icon" type="image/x-icon" href="/Profile-pic (1).jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer@Rakesh</title>
   </head>
